# bodhi-bot-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs
src/data/: dhammapada.rs  mod.rs  prelude.rs
