[package]
name = "bodhi-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = [
    "framework",
    "standard_framework",
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.5.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ], default-features = false }
