[package]
name = "bodhi-bot-rs"
version = "1.0.0"
authors = ["Anshul Chauhan anshulchauhan@outlook.com"]
edition = "2021"
rust-version = "1.60.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.1", default-features = false, features = [
    "framework",
    "standard_framework",
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.7.1", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ], default-features = false }
rand = "0.8.5"
